--- a/client/src/app/pages/dashboard/dashboard.component.html
+++ b/client/src/app/pages/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
-<header class="bg-white dark:bg-gray-800 shadow-sm border-b border-gray-200 dark:border-gray-700">
+<!-- <header class="bg-white dark:bg-gray-800 shadow-sm border-b border-gray-200 dark:border-gray-700">
   <div class="px-4 sm:px-6 lg:px-8 py-4">
-    <h1 class="text-2xl font-bold text-gray-900 dark:text-white">Dashboard 2</h1>
+    <h1 class="text-2xl font-bold text-gray-900 dark:text-white">Dashboard</h1>
   </div>
-</header>
+</header> -->
 
 <main class="p-4 sm:p-6 lg:p-8">
   <div class="grid grid-cols-1 gap-5 sm:grid-cols-2 lg:grid-cols-4 mb-8">
