--- a/client/src/app/pages/onboarding/onboarding.component.html
+++ b/client/src/app/pages/onboarding/onboarding.component.html
@@ -1,6 +1,5 @@
-<div *ngIf="userType === 'guard'" class="w-full px-4 py-8">
-  <app-guard-setting [guardData]="guardData"></app-guard-setting>
-</div>
-<div *ngIf="userType === 'client'" class="w-full px-4 py-8">
-  <app-client-setting [clientData]="clientData"></app-client-setting>
+<div class="w-full px-4 py-8">
+  <app-guard-setting *ngIf="userType === 'guard'"></app-guard-setting>
+  <app-client-setting *ngIf="userType === 'client'"></app-client-setting>
+  <app-service-provider-setting *ngIf="userType === 'service_provider'"></app-service-provider-setting>
 </div>
